hphp/test/zend/bad/ext/standard/tests/file/bug52624.php
<?php
ini_set('open_basedir', .);


echo tempnam("directory_that_not_exists", "prefix_");

?>